<?xml version="1.0" encoding="UTF-8"?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>55</version>
  </parent>

  <groupId>eu.maveniverse.maven.pilot</groupId>
  <artifactId>pilot</artifactId>
  <version>${nisse.jgit.dynamicVersion}</version>
  <packaging>pom</packaging>

  <name>Pilot</name>
  <description>Interactive TUI for Maven — search, browse, and manage dependencies from the terminal.</description>
  <url>https://github.com/maveniverse/pilot</url>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <modules>
    <module>pilot-core</module>
    <module>pilot-plugin</module>
    <module>pilot-cli</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/pilot.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/pilot.git</developerConnection>
    <tag>${nisse.jgit.dynamicVersion}</tag>
    <url>https://github.com/maveniverse/pilot</url>
  </scm>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <mavenVersion>3.9.16</mavenVersion>
    <maven4Version>4.0.0-rc-5</maven4Version>
    <tamboui.version>0.3.0</tamboui.version>
    <domtrip.version>1.5.2</domtrip.version>

    <!-- SonarCloud -->
    <sonar.projectKey>maveniverse_pilot</sonar.projectKey>
    <sonar.organization>maveniverse</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.pilot</groupId>
        <artifactId>pilot-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- TamboUI -->
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-core</artifactId>
        <version>${tamboui.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-tui</artifactId>
        <version>${tamboui.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-widgets</artifactId>
        <version>${tamboui.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-panama-backend</artifactId>
        <version>${tamboui.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-jline3-backend</artifactId>
        <version>${tamboui.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-core</artifactId>
        <version>${tamboui.version}</version>
        <classifier>test-fixtures</classifier>
      </dependency>
      <dependency>
        <groupId>dev.tamboui</groupId>
        <artifactId>tamboui-tui</artifactId>
        <version>${tamboui.version}</version>
        <classifier>test-fixtures</classifier>
      </dependency>

      <!-- DomTrip -->
      <dependency>
        <groupId>eu.maveniverse.maven.domtrip</groupId>
        <artifactId>domtrip-maven</artifactId>
        <version>${domtrip.version}</version>
      </dependency>

      <!-- ASM -->
      <dependency>
        <groupId>org.ow2.asm</groupId>
        <artifactId>asm</artifactId>
        <version>9.10.1</version>
      </dependency>

      <!-- JSON -->
      <dependency>
        <groupId>org.glassfish</groupId>
        <artifactId>jakarta.json</artifactId>
        <version>2.0.1</version>
      </dependency>

      <!-- Maven 3 -->
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${mavenVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${mavenVersion}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${version.maven-plugin-tools}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>

      <!-- Maven 4 -->
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-api-core</artifactId>
        <version>${maven4Version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-impl</artifactId>
        <version>${maven4Version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-embedder</artifactId>
        <version>${maven4Version}</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>6.1.0</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.7</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>ossrh-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-environment</id>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>[17,)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.14</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>test</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
